# ur5_robot

./: LICENSE  readme.md
robotiq_description/launch/: display_robotiq85.launch
robotiq_description/urdf/: robotiq_85_gripper.transmission.xacro
robotiq_gazebo/: CMakeLists.txt  package.xml
ur5_description/: CMakeLists.txt  package.xml
ur5_description/launch/: display.launch  display_with_gripper.launch
ur5_description/urdf/: ur5.urdf.xacro  ur5_joint_limited_robot.urdf  ur5_robotiq85_gripper.urdf.xacro
ur5_gazebo/launch/: ur5_controllers.launch
ur5_gazebo/scripts/: send_gripper.py  send_joints.py
ur5_moveit_config/: .setup_assistant  package.xml
ur5_moveit_config/config/: fake_controllers.yaml  gazebo_ur5.urdf  ompl_planning.yaml  ur5.srdf
ur5_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  planning_context.launch  ros_controllers.launch
ur5_robot/: CMakeLists.txt  package.xml
